<resources>
    <string name="app_name">Gestiunea Cererilor</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_cereri">Requests</string>
    <string name="menu_sedinte">Meetings</string>
    <string name="menu_echipa">Team</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="facultate_hint">Colleague</string>
    <string name="titlu_lucrare_profil">Degree\'s title:</string>
    <string name="profesor_coordonator_profil">Coordinator:</string>
    <string name="nr_echipa_licenta_profil">Bachelor\'s team - no of members:</string>
    <string name="nr_echipa_master_profil">Master\'s team - no of members:</string>
    <string name="cerinte_suplimentare_licenta_profil">Additional requests for bachelor\'s degree:</string>
    <string name="cerinte_suplimentare_master_profil">Additional requests for master\'s degree:</string>
    <string name="email_profil">Email:</string>
    <string name="email_disp">Email: %1$s</string>
    <string name="data">Date:</string>
    <string name="an_facultate_disp">Year: %1$s, University: %2$s</string>
    <string name="other_requests">Other requests: %1$s</string>
    <string name="sing_out">Sing out</string>
    <string name="full_name">Full name:</string>
    <string name="year">Year:</string>
    <string name="degrees_type">Degree\'s type:</string>
    <string name="colleague">Colleague:</string>
    <string name="update_btn">Update</string>
    <string name="template_for_two">%1$s %2$s</string>
    <string name="template_for_one">%1$s</string>
    <string name="fara_mentiuni">No other mentions.</string>
    <string name="numar_studenti_echipa_master">No. of students in master-team: %1$s</string>
    <string name="numar_studenti_echipa_licenta">No. of students in bachelor-team: %1$s</string>
    <string name="dash">-</string>
    <string name="zero">0</string>
    <string name="click_to_edit">Click to edit</string>
    <string name="a_aparut_o_eroare_incearca_din_nou">An error occurred, please try again later.</string>
    <string name="nu_este_nici_o_cerere_disponibila">There is no request available.</string>
    <string name="add_student_to_the_team">Do you want to add the student to your %1$s - team?</string>
    <string name="add_student_to_the_team_last_spot">Warning! That\'s your last spot in your %1$s - team.</string>
    <string name="da">YES</string>
    <string name="nu">NO</string>
    <string name="cancel">Cancel</string>
    <string name="licenta">Bachelor\'s degree</string>
    <string name="disertatie">Master\'s degree</string>
    <string name="nume_student_echipa">%1$s. %2$s</string>
    <string name="nu_sunt_studenti_in_echipe">There are no students in any of the teams.</string>
    <string name="profesori_disponibili">Available professors</string>
    <string name="cererile_mele">My Requests</string>
    <string name="profesor_nume_disp">Professor: %1$s</string>
    <string name="student_nume_disp">Student: %1$s</string>
    <string name="locuri_disponibile">Available seats: %1$s</string>
    <string name="mentiuni_prof_disp">Other requests: %1$s</string>
    <string name="already_got_prof">You already got a professor: %1$s. Good luck!</string>
    <string name="fara_profesori">There are no professors available.</string>
    <string name="fara_sedinte_solicitate">There are no meetings available.</string>
    <string name="fara_sedinte_confirmate">There are no confirmed meetings available.</string>
    <string name="depunere_cerere">Make a request</string>
    <string name="mentiunile_studentului_formular">Mentions: </string>
    <string name="invalid_password">Invalid password</string>
    <string name="unsual_activity">Blocked because of many unusual attempts. Try again later.</string>
    <string name="ai_ambele_echipe_complete">You have both teams fully completed.</string>

    <string name="hi_user">Hi <b> %1$s </b>,</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="phone_must_have_10">Phone must have at least 10 digits</string>
    <string name="please_try_again_phone">Error adding your phone, please try again later.</string>
    <string name="error">Error</string>
    <string name="please_enter_email">Please enter your email</string>
    <string name="invalid_email">Invalid email</string>
    <string name="enter_password">Please enter your password</string>
    <string name="password_minimum_limit">Password must have at least 8 characters.</string>
    <string name="error_login">Error Login</string>
    <string name="invalid_email_or_password">Invalid email or password</string>
    <string name="forgot_pass_failed">Forgot password error</string>
    <string name="forgot_pass_process_failed">Forgot password process failed</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="we_need_your_phone_number">In order to have access in the app we need your phone number.</string>
    <string name="please_enter_it_below">Please enter it below</string>
    <string name="phone_number">Phone number</string>
    <string name="save_phone_number">Save phone number</string>
    <string name="continue_with_google">CONTINUE WITH GOOGLE\n<small>coming soon</small></string>
    <string name="continue_with_facebook">CONTINUE WITH FACEBOOK\n<small>coming soon</small></string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="loading">Loading..</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="trimite">Send</string>
    <string name="status">Status: %1$s</string>
    <string name="data_sedinta">Date: %1$s</string>
    <string name="ora_sedinta">Hour: %1$s - %2$s</string>
    <string name="ora">Hour:</string>
    <string name="motiv">Reason of request: %1$s</string>
    <string name="statuss">Status:</string>
    <string name="tip_cerere">Request type:</string>
    <string name="nume">Name: %1$s</string>
    <string name="raspuns">Professor\'s response: \n%1$s</string>
    <string name="profesor_coordonator_profil_sedinta">Coordinator: %1$s</string>
    <string name="noResponseYet">No response yet.</string>
    <string name="anuleaza_cererea">Cancel request</string>
    <string name="nu_ai_efectuat_nici_o_cerere">You haven\'t made a request, yet.</string>
    <string name="cancel_successful">Cancel successful</string>
    <string name="atentie">Attention!</string>
    <string name="you_cannot_make_another_one">You cannot make another request, until your current one is closed.</string>
    <string name="foloseste_pentru_stud">Use your student\'s address email!!</string>
    <string name="foloseste_email_prof">Use your professor\'s address email!!</string>
    <string name="camp_obligatoriu">Mandatory field!</string>
    <string name="no_student_in_db">No student available in the database.</string>
    <string name="update_succesful">Update succeeded!</string>
    <string name="update_failed">Update failed!</string>
    <string name="menu_requests">Requests</string>
    <string name="menu_team">Teams</string>
    <string name="menu_meetings">Meetings</string>
    <string name="do_you_have_any_other_feedback_please_leave_it_below">Do you have any other feedback? Please leave it below:</string>
    <string name="do_you_have_any_other_response_please_leave_it_below">Do you have any other response? Please leave it below:</string>
    <string name="feedback_goes_here">Feedback goes here</string>
    <string name="response_goes_here">The response goes here</string>
    <string name="doresti_sa_adaugi_sedinta">Do you want to add this meeting in your calendar?</string>
    <string name="set_date">Set date</string>
    <string name="you_don_t_have_any_coordinator_set">You don\'t have any coordinator set.</string>

    <string-array name="ciclu_invatamant">
        <item>Bachelor</item>
        <item>Master</item>
    </string-array>

    <string-array name="user_type">
        <item>Student</item>
        <item>Professor</item>
    </string-array>

    <string-array name="an_licenta_type">
        <item>1L</item>
        <item>2L</item>
        <item>3L</item>
    </string-array>

    <string-array name="an_master_type">
        <item>1M</item>
        <item>2M</item>
    </string-array>

</resources>
