<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.signin.SignInActivity"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true">


    <com.google.android.material.button.MaterialButton
        style="?attr/materialButtonOutlinedStyle"
        android:id="@+id/manage_tags_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_white_button"
        app:icon="@drawable/googleg_disabled_color_18"
        android:paddingStart="@dimen/margin_medium"
        android:text="@string/continue_with_google"
        android:textColor="@color/colorGreyText"
        android:enabled="false"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebook_button"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.button.MaterialButton
        style="?attr/materialButtonOutlinedStyle"
        android:id="@+id/facebook_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/rounded_white_button"
        android:drawableStart="@drawable/common_google_signin_btn_icon_dark_normal"
        app:icon="@drawable/common_google_signin_btn_icon_dark_normal"
        android:text="@string/continue_with_facebook"
        android:textAllCaps="false"
        android:textColor="@color/colorGreyText"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="@+id/manage_tags_button"
        app:layout_constraintStart_toStartOf="@+id/manage_tags_button"
        app:layout_constraintTop_toBottomOf="@+id/signin_button"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signin_button"
        style="?attr/materialButtonStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/facebook_button"
        app:layout_constraintStart_toStartOf="@+id/facebook_button"
        app:layout_constraintTop_toBottomOf="@+id/password_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_onboarding"
        app:layout_constraintEnd_toEndOf="@+id/password_layout"
        app:layout_constraintStart_toStartOf="@+id/password_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:errorTextColor="@color/error_color"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:background="@drawable/login_input_text_background"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        app:errorTextColor="@color/error_color"
        app:layout_constraintEnd_toEndOf="@+id/signin_button"
        app:layout_constraintStart_toStartOf="@+id/signin_button"
        app:layout_constraintTop_toBottomOf="@+id/email_layout"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:background="@drawable/login_input_text_background"
            android:layout_height="match_parent"
            android:inputType="textPassword">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:fontFamily="sans-serif-medium"
        android:id="@+id/forgot_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:textSize="@dimen/text_medium"
        android:text="@string/forgot_your_password"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manage_tags_button" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loadingSpinner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>